bin/testsuite/tests/compiler/src/errors/compiler3649.swg
#global testerror "Err0605"
struct A
{
    x:   string
}

#test
{
    var a: A = {string}
}
